💄 🐛 Fix layoutshift when creating lobbies

--- a/styles/Lobbies.module.css
+++ b/styles/Lobbies.module.css
@@ -25,6 +25,7 @@
   padding: 0 1em 0 0;
   overflow-y: auto;
   max-height: 18em;
+  min-height: 18em;
 }
 .list li {
   margin-bottom: 1em;
